k8s/01-namespace-config.yml
---
# Kubernetes Namespace for TrustWise
# Isolates all TrustWise resources from other namespaces

apiVersion: v1
kind: Namespace
metadata:
  name: trustwise
  labels:
    name: trustwise
